2025-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (value:, value:value:, value:value:value:value:,
    valueWithArgs:): Prevent exception when one of the arguments of the
    value methods is nil.

    * STBlock.m (whileTrue, whileFalse):
    Add methods.

    * NSArray+additions.m (detect:):
    * NSDictionary+additions.m (detect:):
    Return nil if no match was found.

2019-03-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBytecodeInterpreter.m (dispatchBytecode:):
    Use numberWithBool: when pushing true and false values onto the stack.

2019-03-25  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSmalltalkScriptObject.m (forwardInvocation:):
    Call super class implementation for unimplemented methods so that they
    get reported as unimplemented rather than silently returning nil.

2019-02-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * GNUmakefile:
    * NSDictionary+additions.h:
    * NSDictionary+additions.m:
    Implement Smalltalk collection protocol methods for NSDictionary.

2017-12-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (valueWithArguments:): Remove comma that unintentionally
    breaks an exception format string

    * STCompilerUtils.h: Fix wrong return type in method declaration
    flagged up by the GNUstep runtime.

2014-11-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (-valueWithArguments:): Fix bug where the cached context
    of a block could be reused prematurely.
    Note: This could happen only when a block is called recursively and
    entered more than once in an inner invocation, as, e.g., in the
    following code to compute the Fibonacci numbers:
      fib := [:n |
        (n <= 1)
          ifTrue: [1]
          ifFalse: [(fib value: (n - 1)) + (fib value: (n - 2))]].
      fib value: 3.
    Note that the code still does not produce the correct result because
    blocks are not (yet) reentrant in the interpreter, but at least the
    interpreter does not crash anymore.
